--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     </main>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-    const apiUrl = "http://localhost:3000/api/freelancers";
+    const apiUrl = "https://apifreework.onrender.com/api/freelancers";
     const itemsPerPage = 13;
 
     try {
